@@ -11,6 +11,7 @@ HelpMePlay | 1.0.10
 		- Added a new dropdown where the player can decide which Covenant to join for the first time. Maybe you just want all your characters with the Night Fae, and there's nothing wrong with that!
 		- Added support for comparing item level when selecting a quest reward. Gone are the days of choosing less than optimal rewards!
 		- Added suggestions for the first 6 traits players should go for in the Cypher of the First Ones. Beyond these 6, there's really not much to write home about, so the choices are yours.
+		- Added a new option for auto accepting queues! No more do you need to worry about missing your queues while you relieve yourself! It's time to toss the "gamer bottle" aside.
 	Fixes and Updates:
 		- Fixed dialogs that previously worked on Exile's Reach and in Draenor. They didn't want to work because I broke them. My bad...
 		- Fixed an issue with the Drafting Table in Gorgrond. Now you don't have to pick the Sparring Arena on your own.
